# linear-transformations-non-commutativity

./: .gitignore  gui_app.py  plan.md  pyproject.toml  readme.md  requirements.txt
linalg_3d/: __init__.py  vector3d.py
linalg_3d/figures/: __init__.py  cube.py  fish.py  star.py
linalg_3d/transformations/: reflection.py  shearing.py
src/: LineSegment.py  Vector3D.py  main.py
src/linalg_3d/: line_segment.py
src/linalg_3d/figures/: __init__.py  cube.py  fish.py
src/linalg_3d/transformations/: __init__.py  reflection.py  rotation.py  scaling.py  translation.py
src/transformations/: __init__.py  reflection.py  rotation.py  scaling.py  shearing.py  translation.py
tests/: test_figures.py  test_line_segment.py  test_reflection.py  test_rotation.py  test_scaling.py  test_shearing.py  test_translation.py  test_vector3d.py
