[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linalg-3d"
version = "0.1.0"
description = "Educational utilities for 3D linear transformations"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["linalg_3d*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
